--- a/pom.xml
+++ b/pom.xml
@@ -14,22 +14,7 @@
 
     <properties>
         <guava.version>15.0</guava.version>
-    
-        <!--Merge-->
-        <!-- filtered plugin properties, we don't define plugin-scripts here
-        as we build that dynamically using maven-antrun-plugin below. -->
-        <!-- plugin-context is what context this plugin will handle requests on
-        in the application server -->
-        <!--<plugin-context>/jbatch-plugin</plugin-context>-->
-
-        <!-- plugin-name is the name of our plugin, affects the name used for
-        the plugin's mbean -->
-        <!--<plugin-name>jbatch-plugin</plugin-name>-->
-
-        <!-- plugin-domain is currently unused, we just define it to an empty
-        string -->
-        <plugin-domain />
-
+        <!--Hawt.io-->
         <!-- this lets this plugin deploy nicely into karaf, these get used
         for the ImportPackage directive for maven-bundle-plugin -->
         <fuse.osgi.import>
@@ -130,13 +115,6 @@
         </dependency> 
 
         <!-- servlet API is provided by the container -->
-        <!--        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>${servlet-api-version}</version>
-            <version>2.5</version>
-            <scope>provided</scope>
-        </dependency>-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -263,8 +241,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <!--<version>${war-plugin-version}</version>-->
-                <version>2.6</version>
+                <version>${war-plugin-version}</version>
+                <!--<version>2.6</version>-->
                 <configuration>
                     <packagingExcludes>**/lib/slf4j*.jar,**/lib/commons-logging-*.jar,**/classes/log4j.properties,**/lib/guava-*.jar,**/lib/maven-aether-provider-*.jar,**/lib/maven-model-*.jar,**/lib/maven-model-builder-*.jar,**/lib/maven-repository-metadata-*.jar,**/lib/netty-*.jar,**/lib/org.apache.aries.blueprint*.jar,**/lib/plexus-classworlds-*.jar,**/lib/plexus-component-annotations-*.jar,**/lib/plexus-interpolation-*.jar,**/lib/plexus-utils-*.jar,**/lib/wagon-ahc-*.jar,**/lib/wagon-provider-api-*.jar,**/lib/xbean-reflect-*.jar,**/lib/hawtio-git-*.jar</packagingExcludes>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
@@ -338,18 +316,10 @@
                 <version>2.19.1</version>
                 <configuration>
                     <forkMode>always</forkMode>
-                    <systemPropertyVariables>
-                        <!--<arquillian.launch>wildfly-embedded</arquillian.launch>-->
-                        <!--<arquillian.launch></arquillian.launch>-->
+                    <systemPropertyVariables>                       
                         <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                         <jboss.home>.${file.separator}target${file.separator}wildfly-10.0.0.Final</jboss.home>
-                        <module.path>.${file.separator}target${file.separator}wildfly-10.0.0.Final${file.separator}modules</module.path>
-                        <!--                        <jboss.home>.\target\wildfly-10.0.0.Final</jboss.home>
-                        <module.path>.\target\wildfly-10.0.0.Final\modules</module.path>-->
-                    
-                        <!--                    <jboss.home>c:\wildfly\wildfly-10.0.0.Final</jboss.home> 
-                        <property name="managementAddress">127.0.0.1</property>
-                        <property name="managementPort">8080</property>                   -->
+                        <module.path>.${file.separator}target${file.separator}wildfly-10.0.0.Final${file.separator}modules</module.path>          
                     </systemPropertyVariables> 
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>               
                 </configuration>
@@ -412,11 +382,10 @@
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <!--<version>${maven-resources-plugin-version}</version>-->
-                <!--<version>2.7</version>-->
                 <version>2.7</version>
                 <executions>
                     <execution>
-                        <!--                         defining this maven plugin in the same phase as the
+                        <!--defining this maven plugin in the same phase as the
                         maven-antrun-plugin but *after* we've configured the
                         maven-antrun-plugin ensures we filter resources *after*
                         we've discovered the plugin .js files. -->
