--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,7 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20140107</version>
-            <type>jar</type>
+            <!--<type>jar</type>-->
         </dependency>
 
         <dependency>
@@ -172,27 +172,28 @@
             <groupId>org.jboss.ws</groupId>
             <artifactId>jbossws-api</artifactId>
             <version>1.0.3.Final</version>
-            <type>jar</type>
+            <!--<type>jar</type>-->
+             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>2.7.0</version>
-            <type>jar</type>
+            <!--<type>jar</type>-->
         </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
-            <type>jar</type>
+            <!--<type>jar</type>-->
             <scope>provided</scope>
         </dependency>  
-        
-        <!--Zbytecny?-->
+                
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
             <version>3.0.16.Final</version>
+             <scope>provided</scope>
         </dependency>
         
         <!--Tests-->
